<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="sebastianalarcon.com.turismo_arboletes.aboutus">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />


    <item android:id="@+id/action_main"
        android:title="@string/main"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_hoteles"
        android:title="@string/title_activity_hoteles"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_bares"
        android:title="@string/title_activity_bares"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_demografia"
        android:title="@string/title_activity_demografia"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_sitios"
        android:title="@string/title_activity_sitios"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
